--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -84,7 +84,7 @@
 							发布于 <b th:text="${#dates.format(post.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b>
 							<ul class="d-inline float-right">
 								<li class="d-inline ml-2">
-									<a href="javascript:;" th:onclick="|like(this,1,${post.id},${post.userId});|" class="text-primary">
+									<a href="javascript:;" th:onclick="|like(this,1,${post.id},${post.userId},${post.id});|" class="text-primary">
 									<b th:text="${likeStatus==1?'已赞':'赞'}">
 										赞
 									</b>
@@ -141,7 +141,7 @@
 								<span>发布于 <b th:text="${#dates.format(cmap.comment.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b></span>
 								<ul class="d-inline float-right">
 									<li class="d-inline ml-2">
-										<a href="javascript:;" th:onclick="|like(this,2,${cmap.comment.id},${cmap.comment.userId});|" class="text-primary">
+										<a href="javascript:;" th:onclick="|like(this,2,${cmap.comment.id},${cmap.comment.userId},${post.id});|" class="text-primary">
 											<b th:text="${cmap.likeStatus==1?'已赞':'赞'}">
 												赞
 											</b>
@@ -167,7 +167,7 @@
 										<span th:text="${#dates.format(rmap.replay.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</span>
 										<ul class="d-inline float-right">
 											<li class="d-inline ml-2">
-												<a href="javascript:;" th:onclick="|like(this,2,${rmap.replay.id},${rmap.replay.userId});|" class="text-primary">
+												<a href="javascript:;" th:onclick="|like(this,2,${rmap.replay.id},${rmap.replay.userId},${post.id});|" class="text-primary">
 													<b th:text="${rmap.likeStatus==1?'已赞':'赞'}">
 														赞
 													</b>
